--- a/priv/sites/zotonic_status/lib/less/project.less
+++ b/priv/sites/zotonic_status/lib/less/project.less
@@ -72,6 +72,16 @@ body {
             background-color: @main_color_hover;
         }
     }
+    .navbar-brand {
+        font-size: 15px;
+        line-height: 15px;
+        padding: 17px 15px;
+    }
+    .zotonic-logo {
+        height: 15px;
+        width: 87px;
+        margin-right: .4em;
+    }
     .navbar-nav > li > a {
         font-size: 16px;
     }
