--- a/modules/mod_admin/lib/less/navbar.less
+++ b/modules/mod_admin/lib/less/navbar.less
@@ -1,4 +1,8 @@
 .navbar-brand {
+    font-size: 14px;
+    line-height: 14px;
+    padding: 15px 15px;
+
     &:hover {
         &, 
         .zotonic-logo {
@@ -6,6 +10,8 @@
         }
     }
     .zotonic-logo {
+        height: 14px;
+        width: 82px;
         text-shadow: @lightOnDarkTextShadow;
     }
 }
