mod_admin: fix position of drag icon in connection item

--- a/modules/mod_admin/lib/less/tree-list.less
+++ b/modules/mod_admin/lib/less/tree-list.less
@@ -2,7 +2,7 @@ ul.tree-list {
     margin: 0;
     
     li.menu-item {
-        @_side_spacing: 8px;
+        @_side_spacing: 10px;
         @_left_spacing: 32px;
         @_vertical_spacing: 10px;
         @_icon_size: 16px;
@@ -38,7 +38,7 @@ ul.tree-list {
         }
         .z-icon-drag {
             color: #999;
-            left: @_left_spacing;
+            left: @_side_spacing;
         }
         .z-btn-remove {
             right: @_side_spacing;
