--- a/modules/mod_admin/lib/less/bootstrap-overrides.less
+++ b/modules/mod_admin/lib/less/bootstrap-overrides.less
@@ -85,6 +85,7 @@
     @_padding: 15px;
     @_button_margin: 4px;
 
+    background-color: @backgroundColorLightest;
     padding: @_padding;
     
     &.z-button-row {
