--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -4,11 +4,13 @@
 @thumbImageHeight: 60px;
 @miniThumbImageWidth: @thumbImageWidth / 2;
 @miniThumbImageHeight: @thumbImageHeight / 2;
-@radiusBlockElement: 0px;
+@radiusBlockElement: 3px;
 @radiusWidget: @radiusBlockElement;
 @roundBtnSize: 16px;
 @widgetSidePadding: 15px;
 @widgetVerticalPadding: 15px;
+@topbarHeight: 44px;
+@topbarBottomMargin: 26px;
 
 // responsive
 @breakpointMediumMaxWidth: 991px;
@@ -20,7 +22,7 @@
 
 @backgroundColorLight: #eee;
 @backgroundColorLighter: #f2f2f2;
-@backgroundColorLightest: #f6f6f6;
+@backgroundColorLightest: #f5f5f5;
 @backgroundColorInteractive: #eee;
 @backgroundDragPlaceholder: #ddd;
 
