mod_admin: tweak widget colors on edit page

--- a/modules/mod_admin/lib/less/edit-blocks.less
+++ b/modules/mod_admin/lib/less/edit-blocks.less
@@ -39,7 +39,7 @@ ul.blocks.ui-sortable {
     }
     .form-control.block-name {
         background-color: transparent;
-        margin: -@widgetVerticalPadding 0 10px 0;
+        margin: 0 0 10px 0;
         
         &:focus {
             background-color: #fff;
