--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -286,7 +286,7 @@ pre:empty {
 }
 a.close,
 button.close {
-  color: #777777;
+  color: #888888;
 }
 .nav + .tab-content {
   margin: 10px 0 0 0;
@@ -314,7 +314,7 @@ button.close {
   }
 }
 .z-btn-remove {
-  color: #777777;
+  color: #888888;
 }
 .z-btn-remove:hover {
   color: #222222;
@@ -375,7 +375,7 @@ ul.blocks.ui-sortable .widget-header:before {
 }
 ul.blocks.ui-sortable .form-control.block-name {
   background-color: transparent;
-  margin: -15px 0 10px 0;
+  margin: 0 0 10px 0;
 }
 ul.blocks.ui-sortable .form-control.block-name:focus {
   background-color: #fff;
@@ -411,7 +411,7 @@ ul.media > li {
   float: left;
   position: relative;
   padding: 5px;
-  border: 1px solid #dddddd;
+  border: 1px solid #d9d9d9;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -620,7 +620,7 @@ img.admin-list-overview {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15px;
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #d9d9d9;
 }
 .widget.admin-logon .z-logon-box .alert {
   display: none;
@@ -634,7 +634,7 @@ img.admin-list-overview {
 .map-wrapper {
   height: 300px;
   width: 610px;
-  border: 3px solid #dddddd;
+  border: 3px solid #d9d9d9;
   margin: 0 0 9px 0;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -739,7 +739,7 @@ span.icon_status:after {
   width: 12px;
   height: 12px;
   content: " ";
-  background-color: #eeeeee;
+  background-color: #efefef;
   z-index: 1;
 }
 span.icon_status.icon_status_running:before,
@@ -827,10 +827,10 @@ tr.clickable td {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #d9d9d9;
 }
 .table {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #d9d9d9;
 }
 table.do_adminLinkedTable {
   /*
@@ -1169,7 +1169,6 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   -moz-border-radius: 3px;
   border-radius: 3px;
   *zoom: 1;
-  background-color: #f2f2f2;
 }
 .widget:before,
 .widget:after {
@@ -1179,12 +1178,16 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
 .widget:after {
   clear: both;
 }
+.widget,
+.widget.dark {
+  background-color: #e9e9e9;
+}
 .widget h5 {
   margin-top: 18px;
 }
 .widget .widget-content {
   position: relative;
-  padding: 0 15px 0 15px;
+  padding: 15px 15px 0 15px;
 }
 .widget .widget-content hr {
   margin-left: -15px;
@@ -1231,6 +1234,9 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
 .widget .widget-content .rsc-item img {
   margin: 0 10px 0 0;
 }
+.widget .widget-header + .widget-content {
+  border-top: 1px solid #d9d9d9;
+}
 .widget .widget-header,
 .widget .widget-section-header {
   font-weight: normal;
@@ -1241,13 +1247,6 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
 .widget .widget-header {
   margin: 0;
   padding: 15px 15px;
-  -webkit-border-radius: 3px 3px 0;
-  -moz-border-radius: 3px 3px 0;
-  border-radius: 3px 3px 0;
-  background-image: -moz-linear-gradient(top, #e0e0e0 0%, #f2f2f2 100%);
-  background-image: -webkit-linear-gradient(top, #e0e0e0 0%, #f2f2f2 100%);
-  background-image: linear-gradient(to bottom, #e0e0e0 0%, #f2f2f2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0e0e0', endColorstr='#f2f2f2', GradientType=0);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -1282,7 +1281,24 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   line-height: 16px;
   text-shadow: none;
 }
-.widget.widget-expanded .widget-header .widget-header-tools .z-btn-help {
+.widget.widget-active:not(.widget-expanded) {
+  background-color: #f5f5f5;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: background 0.5s ease-in-out;
+  transition: background 0.5s ease-in-out;
+}
+.widget.widget-active:not(.widget-expanded) .widget-header {
+  background-color: #f5f5f5;
+  -webkit-border-radius: 3px 3px 0;
+  -moz-border-radius: 3px 3px 0;
+  border-radius: 3px 3px 0;
+  -webkit-transition: background 0.5s ease-in-out;
+  transition: background 0.5s ease-in-out;
+}
+.widget.widget-expanded .widget-header .widget-header-tools .z-btn-help,
+.widget.dark.widget-expanded .widget-header .widget-header-tools .z-btn-help {
   color: #069cd1;
 }
 .widget h5 {
@@ -1306,24 +1322,44 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   -moz-border-radius: 8px;
   border-radius: 8px;
 }
+.widget.widget-active:not(.widget-expanded) .widget-header:hover {
+  background-color: #e9e9e9;
+  -webkit-transition: background 0.1s ease-in-out;
+  transition: background 0.1s ease-in-out;
+  cursor: pointer;
+}
 li > .widget {
   -webkit-border-radius: 0 0 3px 3px;
   -moz-border-radius: 0 0 3px 3px;
   border-radius: 0 0 3px 3px;
 }
 li h3.widget-header {
-  -webkit-border-radius: 3px 3px 0 0;
-  -moz-border-radius: 3px 3px 0 0;
-  border-radius: 3px 3px 0 0;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
-.widget ul.nav-tabs li.active > a {
-  background-image: -moz-linear-gradient(top, #eeeeee 0%, #ffffff 100%);
-  background-image: -webkit-linear-gradient(top, #eeeeee 0%, #ffffff 100%);
-  background-image: linear-gradient(to bottom, #eeeeee 0%, #ffffff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0);
+.widget > ul.nav-tabs {
+  padding: 0 15px;
+  border-color: #d4d4d4;
+}
+.widget > ul.nav-tabs > li {
+  margin-bottom: 0;
+}
+.widget > ul.nav-tabs > li > a,
+.widget > ul.nav-tabs li.active > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  margin-right: 1px;
+  border: none;
+}
+.widget > ul.nav-tabs > li > a {
+  background-color: #f5f5f5;
+  color: #888888;
+}
+.widget > ul.nav-tabs li.active > a {
+  background-color: #fff;
+  color: #222222;
 }
 .modal .widget {
   margin: 0;
