--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -20,18 +20,20 @@
 @zotonicBlue: #02A7E6;
 @warningColor: #E4522A;
 
-@backgroundColorLight: #eee;
+@backgroundColorMedium: #e9e9e9;
+@backgroundColorLight: #efefef;
 @backgroundColorLighter: #f2f2f2;
 @backgroundColorLightest: #f5f5f5;
 @backgroundColorInteractive: #eee;
 @backgroundDragPlaceholder: #ddd;
 
-@borderColorMedium: #ddd;
+@borderColorDark: #d4d4d4;
+@borderColorMedium: #d9d9d9;
 @borderColorLight: #eee;
 
 @textColorDark: #222;
 @textColorMedium: #777;
-@textColorButton: #777;
+@textColorButton: #888;
 @textColorMuted: #999;
 @textColorLight: #bbb;
 
