mod_admin: tweak colors dashboard

--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -29,6 +29,7 @@
 
 @borderColorDark: #d4d4d4;
 @borderColorMedium: #d9d9d9;
+@borderColorMediumTransparent: fadeout(#d9d9d9, 40%);
 @borderColorLight: #eee;
 
 @textColorDark: #222;
