--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -1189,12 +1189,16 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   position: relative;
   padding: 15px 15px 0 15px;
 }
+.widget .widget-content.widget-content-full {
+  padding-left: 0;
+  padding-right: 0;
+}
 .widget .widget-content hr {
   margin-left: -15px;
   margin-right: -15px;
 }
 .widget .widget-content .widget-content {
-  padding: 0;
+  padding-top: 0;
 }
 .widget .widget-content .widget-content > :last-child {
   margin-bottom: 0;
@@ -1235,7 +1239,7 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   margin: 0 10px 0 0;
 }
 .widget .widget-header + .widget-content {
-  border-top: 1px solid #d9d9d9;
+  border-top: 1px solid rgba(217, 217, 217, 0.6);
 }
 .widget .widget-header,
 .widget .widget-section-header {
@@ -1327,6 +1331,9 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   -webkit-transition: background 0.1s ease-in-out;
   transition: background 0.1s ease-in-out;
   cursor: pointer;
+}
+.dashboard .widget {
+  background-color: #f5f5f5;
 }
 li > .widget {
   -webkit-border-radius: 0 0 3px 3px;
