--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -30,7 +30,7 @@
 @borderColorDark: #d4d4d4;
 @borderColorMedium: #d9d9d9;
 @borderColorMediumTransparent: fadeout(#d9d9d9, 40%);
-@borderColorLight: #eee;
+@borderColorLight: #e5e5e5;
 
 @textColorDark: #222;
 @textColorMedium: #777;
