--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -27,6 +27,7 @@ limitations under the License.
 @import "bootstrap-overrides.less";
 @import "buttons.less";
 @import "connections-list.less";
+@import "dashboard.less";
 @import "edit-blocks.less";
 @import "edit-media.less";
 @import "edit.less";
@@ -41,6 +42,7 @@ limitations under the License.
 @import "status-leds.less";
 @import "suggestions-list.less";
 @import "table.less";
+@import "tabs.less";
 @import "thumbnails.less";
 @import "tinymce.less";
 @import "tree-list.less";
