--- a/modules/mod_admin/lib/less/modal.less
+++ b/modules/mod_admin/lib/less/modal.less
@@ -18,6 +18,8 @@ div.modal {
         }
     }
     .modal-footer {
+        font-size: 0;
+        
         .pull-left {
             margin-left: 0;
         }
