--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -16,6 +16,8 @@
 @breakpointMediumMaxWidth: 991px;
 @breakpointSmallMaxWidth: 767px;
 
+@fontSizeSmall: 12px;
+
 // general colors
 @zotonicBlue: #02A7E6;
 @warningColor: #E4522A;
@@ -25,6 +27,7 @@
 @backgroundColorLighter: #f2f2f2;
 @backgroundColorLightest: #f5f5f5;
 @backgroundColorInteractive: #eee;
+@backgroundColorInteractiveLight: @backgroundColorLightest;
 @backgroundDragPlaceholder: #ddd;
 
 @borderColorDark: #d4d4d4;
