mod_admin: make connections list reusable: fix button label, shorten add link and update translations

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -1293,8 +1293,7 @@ ul.tree-list.tree-list-menu li.menu-item span.category {
   padding-right: 15px;
 }
 .widget .widget-content hr {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin: 15px -15px;
 }
 .widget .widget-content .widget-content {
   padding-top: 0;
