--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -33,8 +33,7 @@
         }
 
         hr {
-            margin-left: -@widgetSidePadding;
-            margin-right: -@widgetSidePadding;
+            margin: 15px -@widgetSidePadding;
         }
         
         .widget-content {
